--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 /* ======== NAVBAR ======== */
@@ -567,6 +568,10 @@ body {
 
 /* ================= MOBILE ================= */
 @media (max-width: 768px) {
+
+  body {
+  overflow-x: hidden; /* esconde rolagem horizontal */
+  }
 
   /* ===== MENU ===== */
   .menu-btn {
